--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
+    <color name="color_on_surface">#000000</color>
+    <color name="color_primary">#8BC34A</color>
+    <color name="color_primary_dark">#33691E</color>
+    <color name="color_on_primary">#FEFEFE</color>
+    <color name="color_primary_container">#C3F0A0</color>
+    <color name="color_on_primary_container">#0B2004</color>
+    <color name="color_secondary">#4CAF50</color>
+    <color name="color_on_secondary">#FEFEFE</color>
+    <color name="color_secondary_container">#DBE5CC</color>
+    <color name="color_on_secondary_container">#151E0E</color>
+    <color name="color_tertiary">#316668</color>
+    <color name="color_on_tertiary">#FEFEFE</color>
+    <color name="color_tertiary_container">#B6ECEE</color>
+    <color name="color_on_tertiary_container">#081E20</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 </resources>
