--- a/app/src/main/res/drawable/item_decorator.xml
+++ b/app/src/main/res/drawable/item_decorator.xml
@@ -1,7 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#FFFFFF"/>
-    <stroke android:width="1dp" android:color="?attr/colorPrimary" />
-    <corners android:radius="5dp"/>
-    <padding android:left="3dp" android:top="3dp" android:right="3dp" android:bottom="3dp" />
+    <solid android:color="?colorSurface" />
+    <stroke
+        android:width="1dp"
+        android:color="?attr/colorPrimary" />
+    <corners android:radius="@dimen/search_textview_corner_radius" />
+    <padding
+        android:bottom="@dimen/search_textview_padding"
+        android:left="@dimen/search_textview_padding"
+        android:right="@dimen/search_textview_padding"
+        android:top="@dimen/search_textview_padding" />
 </shape>
