--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,9 +2,14 @@
 <resources>
     <dimen name="global_padding">3pt</dimen>
     <dimen name="picture_padding">1pt</dimen>
-    <dimen name="description_text_size">20dp</dimen>
-    <dimen name="searched_title_text_size">30dp</dimen>
+    <dimen name="header_text_size">20dp</dimen>
+    <dimen name="description_text_size">13dp</dimen>
+    <dimen name="searched_title_text_size">25dp</dimen>
     <dimen name="searched_title_padding">15dp</dimen>
-    <dimen name="searched_word_text_size">25dp</dimen>
-    <dimen name="wiki_search_corner_radius">10dp</dimen>
+    <dimen name="searched_word_text_size">17dp</dimen>
+    <dimen name="global_corner_radius">10dp</dimen>
+    <dimen name="bottom_sheet_peek_height">45dp</dimen>
+    <dimen name="underline_width">2dp</dimen>
+    <dimen name="search_textview_corner_radius">8dp</dimen>
+    <dimen name="search_textview_padding">3dp</dimen>
 </resources>
