--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,14 +1,43 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.NasaPicture" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
-        <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/color_primary</item>
-        <item name="colorPrimaryDark">@color/color_primary_dark</item>
-        <item name="colorPrimaryContainer">@color/color_primary_container</item>
-        <item name="colorSecondary">@color/color_secondary</item>
-        <item name="colorOnSurfaceVariant">@color/color_primary_dark</item>
+
+    <style name="Nasa" parent = "Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <item name="textAppearanceLargePopupMenu">@style/NasaMenu</item>
+        <item name="textAppearanceSmallPopupMenu">@style/NasaMenu</item>
+        <item name="popupMenuBackground">@drawable/menu_decorator</item>
+    </style>
+
+    <style name="Nasa.Normal">
+        <!-- Primary brand color. -->
+        <item name="colorPrimary">@color/light_green</item>
+        <item name="colorOnPrimary">@color/dark_green</item>
+        <item name="colorPrimaryDark">@color/dark_green</item>
+        <item name="colorPrimaryContainer">@color/extra_light_green</item>
+        <item name="colorSecondary">@color/green</item>
+        <item name="colorOnSurfaceVariant">@color/dark_green</item>
         <!-- Customize your theme here. -->
+        <item name="colorSurface">@color/background_light_green</item>
+        <item name="colorOnSurface">@color/dark_green</item>
+        <item name="bottomSheetStyle">@style/NasaBottomSheet.GreenBottomSheet</item>
+        <item name="nasa_font">@font/montserrat</item>
+        <item name="menu_background">@color/background_light_green</item>
+    </style>
+    
+    <style name="Nasa.Marsian">
+        <!-- Primary brand color. -->
+        <item name="colorPrimary">@color/light_red</item>
+        <item name="colorOnPrimary">@color/dark_red</item>
+        <item name="colorPrimaryDark">@color/dark_red</item>
+        <item name="colorPrimaryContainer">@color/extra_light_red</item>
+        <item name="colorSecondary">@color/red</item>
+        <item name="colorOnSurfaceVariant">@color/dark_red</item>
+        <!-- Customize your theme here. -->
+        <item name="colorSurface">@color/background_light_red</item>
+        <item name="colorOnSurface">@color/dark_red</item>
+        <item name="bottomSheetStyle">@style/NasaBottomSheet.RedBottomSheet</item>
+        <item name="nasa_font">@font/roboto</item>
+        <item name="menu_background">@color/background_light_red</item>
     </style>
 </resources>
