--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -59,4 +59,13 @@
     <style name="NasaMenu" parent="TextAppearance.MaterialComponents.Subtitle1">
         <item name="android:textColor">?colorOnPrimary</item>
     </style>
+
+    <style name="BottomNavigationView" parent="Widget.Material3.BottomNavigationView.ActiveIndicator">
+        <item name="materialThemeOverlay">@style/ThemeOverlay.App.BottomNavigationView</item>
+    </style>
+
+    <style name="ThemeOverlay.App.BottomNavigationView" parent="">
+        <item name="colorPrimary">@color/bottom_sheet_selected</item>
+        <item name="colorOnSurface">@color/bottom_sheet_unselected</item>
+    </style>
 </resources>
