--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,9 +8,14 @@
     <dimen name="searched_title_padding">15dp</dimen>
     <dimen name="searched_word_text_size">17dp</dimen>
     <dimen name="global_corner_radius">10dp</dimen>
-    <dimen name="bottom_sheet_peek_height">45dp</dimen>
+    <dimen name="bottom_sheet_peek_height">35dp</dimen>
     <dimen name="underline_width">2dp</dimen>
     <dimen name="search_textview_corner_radius">8dp</dimen>
     <dimen name="search_textview_padding">3dp</dimen>
     <dimen name="bottom_navigation_view_height">15pt</dimen>
+    <dimen name="translation_image">400dp</dimen>
+    <dimen name="translation_toolbar">-45dp</dimen>
+    <dimen name="bottomsheet_elevation">5dp</dimen>
+    <dimen name="fab_elevation">10dp</dimen>
+    <dimen name="fab_image_size">56dp</dimen>
 </resources>
