--- a/app/src/main/res/layout/wiki_search_fragment.xml
+++ b/app/src/main/res/layout/wiki_search_fragment.xml
@@ -20,21 +20,36 @@
             android:fitsSystemWindows="true"
             app:titleEnabled="false"
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/wikipedia_alfa"
-                android:layout_margin="@dimen/global_padding"
-                app:layout_collapseMode="parallax"/>
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/global_padding"
+        android:src="@drawable/wikipedia_alfa"
+        app:layout_collapseMode="parallax" />
+
+    <com.google.android.material.appbar.MaterialToolbar
+        style="@style/Widget.MaterialComponents.Toolbar.Primary"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:fitsSystemWindows="true"
+        app:layout_collapseMode="pin"
+        app:layout_scrollFlags="scroll|exitUntilCollapsed"
+        app:title="@string/searched_at_wiki" />
+
+</LinearLayout>
+
         </com.google.android.material.appbar.CollapsingToolbarLayout>
-        <com.google.android.material.appbar.MaterialToolbar
+
+        <com.google.android.material.tabs.TabLayout
+            android:id="@+id/words_tab"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_collapseMode="pin"
-            android:fitsSystemWindows="true"
-            style="@style/Widget.MaterialComponents.Toolbar.Primary"
-            app:title="@string/searched_at_wiki" />
+            app:tabMode="scrollable" />
     </com.google.android.material.appbar.AppBarLayout>
 
 
@@ -50,11 +65,7 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <com.google.android.material.tabs.TabLayout
-                android:id="@+id/words_tab"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:tabMode="scrollable" />
+
 
             <androidx.viewpager2.widget.ViewPager2
                 android:id="@+id/words_view"
