--- a/app/src/main/res/values/integers.xml
+++ b/app/src/main/res/values/integers.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <integer name="translation_duration">1000</integer>
+    <integer name="fab_rotation">-45</integer>
 </resources>
