Урок 06. Добавлена анимация RecyclerView и 2 разных Item к нему

--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -1,19 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/root"
     tools:context=".ui.main.MainFragment">
+
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/picture_tab_layout"
+        style="@style/Widget.MaterialComponents.Toolbar.Surface"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        tools:visibility="visible"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <com.google.android.material.tabs.TabItem
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/ereyesterday" />
+
+        <com.google.android.material.tabs.TabItem
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/yesterday" />
+
+        <com.google.android.material.tabs.TabItem
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/today" />
+    </com.google.android.material.tabs.TabLayout>
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:id="@+id/main_layout"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/bottom_navigation_view">
+        app:layout_constraintTop_toBottomOf="@id/picture_tab_layout">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/main"
@@ -25,18 +51,18 @@
             tools:visibility="visible">
 
             <com.google.android.material.textfield.TextInputLayout
-                android:visibility="gone"
-                tools:visibility="visible"
                 android:id="@+id/wiki_search_text"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toTopOf="parent"
+                android:visibility="gone"
                 app:endIconCheckable="true"
                 app:endIconDrawable="@drawable/search"
                 app:endIconMode="custom"
                 app:helperText="@string/wiki_search_helper_text"
-                app:helperTextTextColor="?colorOnPrimary">
+                app:helperTextTextColor="?colorOnPrimary"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:visibility="visible">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
@@ -50,10 +76,11 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:translationX="1500dp"
-                tools:translationX="0dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/wiki_search_text">
+                app:layout_constraintTop_toBottomOf="@+id/wiki_search_text"
+                tools:translationX="0dp">
+
                 <TextView
                     android:id="@+id/title"
                     style="@style/TextView.Header"
@@ -61,19 +88,18 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     tools:text="Mercury" />
+
                 <androidx.appcompat.widget.AppCompatImageView
                     android:id="@+id/image"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    tools:layout_height="300dp"
                     android:layout_marginTop="@dimen/global_padding"
                     android:contentDescription="@string/app_name"
                     android:scaleType="centerInside"
-                    app:layout_constraintTop_toBottomOf="@id/title" />
+                    app:layout_constraintTop_toBottomOf="@id/title"
+                    tools:layout_height="300dp" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
-
-
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -82,29 +108,21 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="@dimen/global_padding"
-            app:layout_anchor="@id/bottom_sheet"
-            app:layout_anchorGravity="top|end"
+            android:elevation="@dimen/fab_elevation"
             android:src="@drawable/wikipedia"
             android:visibility="gone"
-            tools:visibility="visible"
-            app:tint="@null"
+            app:layout_anchor="@id/bottom_sheet"
+            app:layout_anchorGravity="top|end"
             app:maxImageSize="56dp"
-            android:elevation="@dimen/fab_elevation"
-            tools:ignore="ContentDescription" />
+            app:tint="@null"
+            tools:ignore="ContentDescription"
+            tools:visibility="visible" />
 
-        <include layout="@layout/bottom_sheet"
-            android:id="@+id/bottom_sheet"/>
+        <include
+            android:id="@+id/bottom_sheet"
+            layout="@layout/bottom_sheet" />
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
-
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/bottom_navigation_view"
-        style="@style/BottomNavigationView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:translationY="@dimen/translation_toolbar"
-        app:layout_constraintTop_toTopOf="parent"
-        app:menu="@menu/bottom_navigation_menu" />
 
     <include
         android:id="@+id/loading"
