--- a/app/src/main/res/layout/wiki_search_fragment.xml
+++ b/app/src/main/res/layout/wiki_search_fragment.xml
@@ -15,38 +15,42 @@
         <com.google.android.material.appbar.CollapsingToolbarLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:titleCollapseMode="fade"
-            app:expandedTitleGravity="top"
             android:fitsSystemWindows="true"
-            app:titleEnabled="false"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed">
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical">
+            android:background="?colorPrimarySurface"
+            app:expandedTitleGravity="top"
+            app:layout_scrollFlags="scroll|exitUntilCollapsed"
+            app:titleCollapseMode="fade"
+            app:titleEnabled="false">
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/global_padding"
-        android:src="@drawable/wikipedia_alfa"
-        app:layout_collapseMode="parallax" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
 
-    <com.google.android.material.appbar.MaterialToolbar
-        style="@style/Widget.MaterialComponents.Toolbar.Primary"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:fitsSystemWindows="true"
-        app:layout_collapseMode="pin"
-        app:layout_scrollFlags="scroll|exitUntilCollapsed"
-        app:title="@string/searched_at_wiki" />
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/global_padding"
+                    android:src="@drawable/wikipedia_alfa"
+                    app:layout_collapseMode="parallax"
+                    tools:ignore="ContentDescription" />
 
-</LinearLayout>
+                <com.google.android.material.appbar.MaterialToolbar
+                    style="@style/Widget.MaterialComponents.Toolbar.Surface"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fitsSystemWindows="true"
+                    app:layout_collapseMode="pin"
+                    app:layout_scrollFlags="scroll|exitUntilCollapsed"
+                    app:title="@string/searched_at_wiki" />
+
+            </LinearLayout>
 
         </com.google.android.material.appbar.CollapsingToolbarLayout>
 
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/words_tab"
+            style="@style/Widget.MaterialComponents.Toolbar.Surface"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:tabMode="scrollable" />
@@ -66,12 +70,11 @@
             android:orientation="vertical">
 
 
-
             <androidx.viewpager2.widget.ViewPager2
                 android:id="@+id/words_view"
-                android:padding="@dimen/global_padding"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="match_parent"
+                android:padding="@dimen/global_padding" />
 
         </LinearLayout>
 
