--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -18,4 +18,6 @@
     <dimen name="bottomsheet_elevation">5dp</dimen>
     <dimen name="fab_elevation">10dp</dimen>
     <dimen name="fab_image_size">56dp</dimen>
+    <dimen name="add_note_icon_size">40dp</dimen>
+    <dimen name="note_text_size">18dp</dimen>
 </resources>
