--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,15 +1,15 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
     <!-- Base application theme. -->
 
     <style name="Nasa" parent = "Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <item name="textAppearanceLargePopupMenu">@style/NasaMenu</item>
         <item name="textAppearanceSmallPopupMenu">@style/NasaMenu</item>
         <item name="popupMenuBackground">@drawable/menu_decorator</item>
     </style>
 
-    <style name="Nasa.Normal">
+    <style name="Nasa.Green">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/light_green</item>
         <item name="colorOnPrimary">@color/dark_green</item>
@@ -25,7 +25,7 @@
         <item name="menu_background">@color/background_light_green</item>
     </style>
     
-    <style name="Nasa.Marsian">
+    <style name="Nasa.Red">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/light_red</item>
         <item name="colorOnPrimary">@color/dark_red</item>
